dgkanatsios_practice/multi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi
  name: multi
spec:
  volumes:
  - name: vol
    emptyDir: {}
  containers:
  - command:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: coontainer1
    volumeMounts:
    - name: vol
      mountPath: /etc/foo
    resources: {}
  - command:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: container2
    volumeMounts:
    - name: vol
      mountPath: /etc/foo
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
