dgkanatsios_practice/my-app-deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: my-app
  name: my-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: my-app
        version: v2
    spec:
      volumes:
      - name: vol
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: vol
          mountPath: /usr/share/nginx/html
