dgkanatsios_practice/nodepod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nodepod
  name: nodepod
spec:
  nodeSelector:
    accelerator: nvidia-tesla-p100
  containers:
  - image: nginx
    name: nodepod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
