dgkanatsios_practice/pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: mysecret
    secret: 
      secretName: mysecret2
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: mysecret
      mountPath: /etc/foo
      readOnly: true
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
